--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
-<body>
-  <div class="page">
+<body class="page">
+  <header class="header">
 
-  </div>
+    <div class="header__logo header__logo_place_header"><img src="images/logo_place_header.svg" width="228px" height="32px"alt="logo"/></div>
+    <h1 class="header__title">Научиться учиться</h1>
+    <div class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?
+      <a href="#" class="subtitle__link">Узнать</a>
+    </div>
+    <div class="header__main-illustration">
+      <img src="images/header-image.png" width="765px" height="608px" ;alt="header-image"/> 
+    </div>
+    <div class="header__square-pic"></div>
+    
+  </header>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
 </body>
 </html>
