--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
 <body class="page">
   <header class="header">
 
-    <div class="header__logo header__logo_place_header"><img src="images/logo_place_header.svg" width="228px" height="32px"alt="logo"/></div>
+    <div class="header__logo header__logo_place_header"><img src="./images/logo_place_header.svg" width="228px" height="32px"alt="logo"/></div>
     <h1 class="header__title">Научиться учиться</h1>
     <div class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?
       <a href="#" class="subtitle__link">Узнать</a>
     </div>
     <div class="header__main-illustration">
-      <img src="images/header-image.png" width="765px" height="608px" ;alt="header-image"/> 
+      <img src="./images/header-image.png" width="765px" height="608px" ;alt="header-image"/> 
     </div>
     <div class="header__square-pic"></div>
     
   </header>
-  <section></section>
-  <section></section>
-  <section></section>
-  <section></section>
-  <section></section>
+  <section class="description">
+    <div class="two-columns">
+
+      <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+      <ul class="two-columns__main-text">
+      <li class="two-columns__paragraph">Ни в школе, ни в институте нас не учать тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,чтобы лучше сдать тест,но часто в итоге это не даёт нам реального знания.Зубрёжка быстро выветривается и не приносит пользы.</li>
+      <li class="two-columns__paragraph">
+        <span class="two-columns__span">Вывод: </span>
+        Учиться тоже нужно уметь, но почему-то этому мало где учат. Что с ним делать?</li>
+      <li class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффеткивным и захватывающим.Эти же техники применяются на примере обучения в Практикуме.</li>
+      
+      </ul>
+
+    </div>
+
+  </section>
 </body>
 </html>
