--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <title>Научиться учиться</title>
 </head>
 <body class="page">
+
   <header class="header">
 
-    <div class="header__logo header__logo_place_header"><img src="./images/logo_place_header.svg" width="228px" height="32px"alt="logo"/></div>
+    <div class="header__logo header__logo_place_header"><img src="./images/logo_place_header.svg" alt="logo"/></div>
     <h1 class="header__title">Научиться учиться</h1>
     <div class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?
       <a href="#" class="subtitle__link">Узнать</a>
@@ -21,6 +22,8 @@
     <div class="header__square-pic"></div>
     
   </header>
+
+  <div class="content">
   <section class="description">
     <div class="two-columns">
 
@@ -37,5 +40,135 @@
     </div>
 
   </section>
+  <section class="digits">
+    <h2 class="digits__section-title">Цифры и факты</h2>
+    <p class="digits__section-subtitle">Про учёбу и мозг</p>
+    <div class="digits__table">
+      <div class="table__cell table__cell_place_digits">
+        <h3 class="table__heading table__heading_place_digits">86 миллиардов</h3>
+          <p class="table__text table__text_place_digits">Число нейронов в мозге человека</p>
+      </div>
+      <div class="table__cell table__cell_place_digits">
+        <h3 class="table__heading table__heading_place_digits">2,1 миллиардов</h3>
+          <p class="table__text table__text_place_digits ">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_place_digits">Банк 2017</p>
+      </div>
+      <div class="table__cell table__cell_place_digits">
+        <h3 class="table__heading table__heading_place_digits">1000 терабайт</h3>
+          <p class="table__text table__text_place_digits">Объём человеческой памяти</p>
+      </div>
+      <div class="table__cell table__cell_place_digits">
+        <h3 class="table__heading table__heading_place_digits">500 триллионов</h3>
+          <p class="table__text table__text_place_digits">Число ответсвенных за обучение нервных синапсов у взрослого человека</p>
+      </div>
+      <div class="table__cell table__cell_place_digits">
+        <h3 class="table__heading table__heading_place_digits">420 миллионов</h3>
+          <p class="table__text table__text_place_digits">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_place_digits">Всемирный Банк, 2017</p>
+      </div>
+      <div class="table__cell table__cell_place_digits">
+        <h3 class="table__heading table__heading_place_digits">17-20 лет</h3>
+          <p class="table__text table__text_place_digits">Пик обучаемости</p>
+      </div>
+      <div class="table__cell table__cell_place_digits">
+        <h3 class="table__heading table__heading_place_digits">1885 год</h3>
+          <p class="table__text table__text_place_digits">Открытие кривой забывания</p>
+      </div>
+      <div class="table__cell table__cell_place_digits">
+        <h3 class="table__heading table__heading_place_digits">1889 год</h3>
+          <p class="table__text table__text_place_digits">Открытие условного рефлекса</p>
+      </div>
+      
+    </div>
+  </section>
+
+  <section class="feynman">
+    <div class="image_feynman"><img src="./images/feynman.png" width="867px" height="637px" ;alt="feynman"/></div>
+    <h2 class="feynman__title">Метод Фейнмана</h2>
+    <p class="feynman__subtitle">Выучить и не забыть</p>
+    <a href="#" class="feyman__link">Подробнее</a>
+  </section>
+
+  <section class="kaufman">
+    <h2 class="kaufman__section-title section-title_theme_dark">Принципы обучения</h2>
+    <p class="kaufman__section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+    <div class="kaufman__table kaufman__table_theme_dark">
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">1</h3>
+          <p class="table__text table__text_theme_dark">Выберите привлекательный проект</p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">2</h3>
+          <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">3</h3>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства</p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">4</h3>
+          <p class="table__text table__text_theme_dark">
+            Разбейте навык на элементы.
+          </p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">5</h3>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">6</h3>
+          <p class="table__text table__text_theme_dark">Устраните препятсвия для занятий.</p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">7</h3>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">8</h3>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">9</h3>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+      </div>
+      <div class="table__cell table__cell_teme_dark">
+        <h3 class="table__heading table__heading_theme_dark">10</h3>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+      </div>
+    </div>
+    <img class ="kaufman__triangle" alt="" src="./images/kaufman-triangle.svg">
+  </section>
+  </div>
+
+  <footer class="footer">
+    <div class="footer__columns">
+      <div class="footer__column footer__column_content_copyright"><div class="footer__logo footer__logo_place_footer"><img src="./images/logo_place_footer.svg" alt="logo_footer"/></div>
+      <div class="footer__author">&copy; Константин Самохин</div>
+      </div>
+      <div class="footer__column footer__column_content_info">
+        <h3 class="footer__column_heading">О практикуме</h3>
+        <nav>
+          <ul class="footer_column-links">
+             <li><a href="#">Главная</a></li>
+             <li><a href="#">Концепция</a></li>
+             <li><a href="#">Наставники</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__column footer__column_content_social">
+        <h3 class="footer__column_heading">Соцсети</h3>
+        <nav>
+          <ul class="footer_column-links">
+             <li><a href="#"><img class="footer_social-icon" src="./images/youtube-icon.svg">YouTube</a></li>
+             <li><a href="#"><img class="footer_social-icon" src="./images/vk_color_white.svg">ВКонтакте</a></li>
+             <li><a href="#"><img class="footer_social-icon" src="./images/tiktok-icon.svg">TikTok</a></li>
+          </ul>
+        </nav>
+
+      </div>
+    </div>
+  </footer>
 </body>
+
+
 </html>
