--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="header">
 
-    <div class="header__logo header__logo_place_header"><img src="./images/logo_place_header.svg" alt="logo"/></div>
+    <div class="header__logo header__logo_place_header"><img src="./images/logo_place_header.svg" alt="логотип"/></div>
     <h1 class="header__title">Научиться учиться</h1>
     <div class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?
       <a href="#" class="subtitle__link">Узнать</a>
@@ -142,7 +142,7 @@
 
   <footer class="footer">
     <div class="footer__columns">
-      <div class="footer__column footer__column_content_copyright"><div class="footer__logo footer__logo_place_footer"><img src="./images/logo_place_footer.svg" alt="logo_footer"/></div>
+      <div class="footer__column footer__column_content_copyright"><div class="footer__logo footer__logo_place_footer"><img src="./images/logo_place_footer.svg" alt="логоти_подвал"/></div>
       <div class="footer__author">&copy; Константин Самохин</div>
       </div>
       <div class="footer__column footer__column_content_info">
