--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#" class="header__link">Узнать</a>
     </h2>
     <div class="header__main-illustration">
-      <img class="main-illustration_img" src="./images/header-image.png" ;alt="header-image"/> 
+      <img class="main-illustration_img" src="./images/header-image.png" alt="header-image"> 
     </div> 
     <div class="header__square-pic"></div>  
   </header>
@@ -24,7 +24,7 @@
   <main>
   <div class="content">
   <section class="description">
-    <article class="two-columns">
+    <div class="two-columns">
       <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
       <div class="two-columns__main-text">
       <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учать тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,чтобы лучше сдать тест,но часто в итоге это не даёт нам реального знания.Зубрёжка быстро выветривается и не приносит пользы.</p>
@@ -33,7 +33,7 @@
         Учиться тоже нужно уметь, но почему-то этому мало где учат. Что с ним делать?</p>
       <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффеткивным и захватывающим.Эти же техники применяются на примере обучения в Практикуме.</p>
       </div>
-    </article>
+    </div>
   </section>
 
   <section class="digits">
@@ -138,7 +138,7 @@
 
   <footer class="footer">
     <div class="footer__columns">
-      <div class="footer__column footer__column_content_copyright"><div class="logo logo_place_footer"><img src="./images/logo_place_footer.svg" alt="логоти_подвал"/></div>
+      <div class="footer__column footer__column_content_copyright"><div class="logo logo_place_footer"><img src="./images/logo_place_footer.svg" alt="логоти_подвал"></div>
       <p class="footer__author">&copy; Константин Самохин</p>
       </div>
       <div class="footer__column footer__column_content_info">
