--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main>
   <div class="content">
   <section class="description">
-    <div class="two-columns">
+      <div class="two-columns"> <!-- на тег <article></article> "ругается" валидатор кода -->
       <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
       <div class="two-columns__main-text">
       <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учать тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,чтобы лучше сдать тест,но часто в итоге это не даёт нам реального знания.Зубрёжка быстро выветривается и не приносит пользы.</p>
