--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <nav>
           <ul class="footer__column-links">
-             <li><a class ="footer__column-link" href="#"><img class="footer__social-icon" alt="YouTube" src="./images/youtube-icon.svg">YouTube</a></li>
+             <li><a class ="footer__column-link" href="#"><img class="footer__social-icon" alt="Ютуб" src="./images/youtube-icon.svg">YouTube</a></li>
              <li><a class ="footer__column-link" href="#"><img class="footer__social-icon" alt="ВКонтакте" src="./images/vk_color_white.svg">ВКонтакте</a></li>
-             <li><a class ="footer__column-link" href="#"><img class="footer__social-icon" alt="TikTok" src="./images/tiktok-icon.svg">TikTok</a></li>
+             <li><a class ="footer__column-link" href="#"><img class="footer__social-icon" alt="ТикТок" src="./images/tiktok-icon.svg">TikTok</a></li>
           </ul>
         </nav>
       </div>
