--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <h2 class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?
       <a href="#" class="header__link">Узнать</a>
     </h2>
-    <div class="header__main-illustration">
-      <img class="main-illustration_img" src="./images/header-image.png" alt="опять двойка"> 
-    </div> 
+      <img class="header__main-illustration" src="./images/header-image.png" alt="опять двойка"> 
     <div class="header__square-pic"></div>  
   </header>
   
@@ -89,7 +87,7 @@
     <div class="feynman__img"></div>
     <h2 class="feynman__title">Метод Фейнмана</h2>
     <p class="feynman__subtitle">Выучить и не забыть</p>
-    <a href="#" class="feyman__link">Подробнее</a>
+    <a href="#" class="feynman__link">Подробнее</a>
   </section>
 
   <section class="digits">
