--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <header class="header">
     <div class="logo logo_place_header"></div>
     <h1 class="header__title">Научиться учиться</h1>
-    <h2 class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?
+    <p class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?
       <a href="#" class="header__link">Узнать</a>
-    </h2>
+    </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="опять двойка"> 
-    <div class="header__square-pic"></div>  
+    <div class="header__square-pic rotation"></div>  
   </header>
   
   <main>
@@ -101,7 +101,7 @@
       <div class="table__cell">
         <h3 class="table__heading">2,1 миллиардов</h3>
           <p class="table__text ">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Банк 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
       </div>
       <div class="table__cell">
         <h3 class="table__heading">1000 терабайт</h3>
@@ -135,7 +135,7 @@
     <div class="khan__container">
     <p class="khan__author">Салман Хан</p>
     <h2 class="khan__title">Весь мир - школа</h2>
-    <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+    <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
     <p class="khan__quote-author">Джордж Лукас</p>
     <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
     <div class="khan__book-container">
@@ -192,7 +192,7 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
       </div>
     </div>
-    <div class="kaufman__triangle"></div>   
+    <div class="kaufman__triangle rotation"></div>   
   </section>
 
   <section class="resources">
